--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
 asgiref==3.3.4
+autopep8==1.5.7
 Django==3.2.4
 django-environ==0.4.5
+django-extensions==3.1.3
 mysqlclient==2.0.3
+pycodestyle==2.7.0
 pytz==2021.1
 sqlparse==0.4.1
+toml==0.10.2
