--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
   "dependencies": {
     "css-loader": "^6.7.3",
     "lodash": "^4.17.21",
-    "next": "^13.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router": "^6.13.0",
+    "react-router-dom": "^6.13.0",
+    "recoil": "^0.7.7",
     "sass": "^1.57.1",
     "sass-loader": "^13.2.0",
     "style-loader": "^3.3.1"
