--- a/package.json
+++ b/package.json
@@ -30,12 +30,15 @@
     "webpack-cli": "^5.0.1"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "css-loader": "^6.7.3",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-query": "^3.39.3",
     "react-router": "^6.13.0",
     "react-router-dom": "^6.13.0",
+    "react-toastify": "^9.1.3",
     "recoil": "^0.7.7",
     "sass": "^1.57.1",
     "sass-loader": "^13.2.0",
